--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -327,9 +327,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "PyeongChang"
+         ],
+         "type": "scatter",
+         "uid": "3cae3a96-4bf4-11e9-92ef-e9f66317bd79"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"571bebd8-2733-4cee-ac3b-3108810cdad1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"571bebd8-2733-4cee-ac3b-3108810cdad1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"PyeongChang\"], \"type\": \"scatter\", \"uid\": \"3cb25572-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"571bebd8-2733-4cee-ac3b-3108810cdad1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"571bebd8-2733-4cee-ac3b-3108810cdad1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"PyeongChang\"], \"type\": \"scatter\", \"uid\": \"3cb25572-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
