Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires', 'Toronto', 'PyeongChang']\n",
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -338,19 +338,19 @@
          "text": [
           "Buenos Aires",
           "Toronto",
-          "PyeongChang"
+          "Pyeongchang"
          ],
          "type": "scatter",
-         "uid": "3cae3a96-4bf4-11e9-92ef-e9f66317bd79"
+         "uid": "7a48eb62-4bf4-11e9-92ef-e9f66317bd79"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"571bebd8-2733-4cee-ac3b-3108810cdad1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"571bebd8-2733-4cee-ac3b-3108810cdad1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"PyeongChang\"], \"type\": \"scatter\", \"uid\": \"3cb25572-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ef049d06-7977-467d-9746-1f23d13e2680\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef049d06-7977-467d-9746-1f23d13e2680\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"7a4e151a-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"571bebd8-2733-4cee-ac3b-3108810cdad1\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"571bebd8-2733-4cee-ac3b-3108810cdad1\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"PyeongChang\"], \"type\": \"scatter\", \"uid\": \"3cb25572-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ef049d06-7977-467d-9746-1f23d13e2680\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ef049d06-7977-467d-9746-1f23d13e2680\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"7a4e151a-4bf4-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
