Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "text_values = [\"City1\", \"\"]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
@@ -327,9 +327,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar",
+         "uid": "048bf404-4bf5-11e9-92ef-e9f66317bd79"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"fb1bd953-c7fd-483b-90e6-59a8514d2336\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fb1bd953-c7fd-483b-90e6-59a8514d2336\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"04920cf4-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"fb1bd953-c7fd-483b-90e6-59a8514d2336\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fb1bd953-c7fd-483b-90e6-59a8514d2336\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"04920cf4-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
