--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [\"City1\", \"\"]\n",
+    "text_values = [\"City1\", \"City2\", \"City3\"]\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
