Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -336,21 +336,21 @@
        "data": [
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "City1",
+          "City2",
+          "City3"
          ],
          "type": "bar",
-         "uid": "048bf404-4bf5-11e9-92ef-e9f66317bd79"
+         "uid": "1b647a70-4bf5-11e9-92ef-e9f66317bd79"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"fb1bd953-c7fd-483b-90e6-59a8514d2336\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fb1bd953-c7fd-483b-90e6-59a8514d2336\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"04920cf4-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"941a2d2d-0b20-4fb0-a120-c181b28facdc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"941a2d2d-0b20-4fb0-a120-c181b28facdc\", [{\"text\": [\"City1\", \"City2\", \"City3\"], \"type\": \"bar\", \"uid\": \"1b6965a8-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"fb1bd953-c7fd-483b-90e6-59a8514d2336\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fb1bd953-c7fd-483b-90e6-59a8514d2336\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"bar\", \"uid\": \"04920cf4-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"941a2d2d-0b20-4fb0-a120-c181b28facdc\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"941a2d2d-0b20-4fb0-a120-c181b28facdc\", [{\"text\": [\"City1\", \"City2\", \"City3\"], \"type\": \"bar\", \"uid\": \"1b6965a8-4bf5-11e9-92ef-e9f66317bd79\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
