--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "text_values = [\"City1\", \"City2\", \"City3\"]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, x:}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, x'':}"
    ]
   },
   {
