--- a/index.ipynb
+++ b/index.ipynb
@@ -297,12 +297,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = [\"City1\", \"City2\", \"City3\"]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x':x_values,'y'}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values, 'x':x_values,'y':y_values}"
    ]
   },
   {
